// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ios 1. card default state 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        A card
      </Text>
    </View>
  </View>
</View>
`;

exports[`ios 2. pass an empty state to the image component 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View>
      <Text>
        A card with an empty image
      </Text>
    </View>
  </View>
</View>
`;

exports[`ios 3. card without an image when showimage is false 1`] = `
<View>
  <View>
    <View>
      <Text>
        No image
      </Text>
    </View>
  </View>
</View>
`;

exports[`ios 4. pass an empty state to the image component when uri is null 1`] = `
<View>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View>
      <Text>
        No URI
      </Text>
    </View>
  </View>
</View>
`;

exports[`ios 5. card with reversed layout 1`] = `
<View>
  <View>
    <View>
      <Text>
        A card in reverse
      </Text>
    </View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
  </View>
</View>
`;

exports[`ios 6. card with reversed layout and no image 1`] = `
<View>
  <View>
    <View>
      <Text>
        A card in reverse with no image
      </Text>
    </View>
  </View>
</View>
`;

exports[`ios 7. card with a loading state 1`] = `
<View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
    />
  </View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`ios 8. card with a loading state and no image 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`ios 9. card with reversed loading state 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
  <View>
    <Image
      aspectRatio={0.6666666666666666}
    />
  </View>
</View>
`;

exports[`ios 10. card with reversed loading state with no image 1`] = `
<View>
  <View>
    <Gradient
      degrees={264}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
    <Gradient
      degrees={267}
    />
  </View>
</View>
`;

exports[`ios 11. card should not re-render when imageratio prop is changed 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 11. card should not re-render when imageratio prop is changed 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 12. card should re-render when image uri changes 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Some text
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 12. card should re-render when image uri changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="http://foo&resize=360"
      />
    </View>
    <View>
      <Text>
        Some text
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 13. card should re-render when image size changes 1`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 13. card should re-render when image size changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img"
      />
    </View>
    <View>
      <Text>
        Some content
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`ios 14. card should re-render when loading state changes 1`] = `
<Loading
  imageRatio={0.6666666666666666}
  isReversed={false}
  showImage={true}
/>
`;

exports[`ios 14. card should re-render when loading state changes 2`] = `
<FadeIn>
  <View>
    <View>
      <Image
        aspectRatio={0.6666666666666666}
        uri="https://img.io/img&resize=360"
      />
    </View>
    <View>
      <Text>
        Re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;
